# parser_cian

./: .flake8  .gitignore  README.md  alembic.ini  config.py  main.py  pyproject.toml
migrations/: env.py
src/: cian.json  db_create.py  db_insert.py  db_models.py  dict_regions.json  flat.py  flats_generator.py  interactive.py  interactive_new.py  json_worker.py  parser_cian.py  parser_cian_new.py  run_parser_flats.py  run_parser_new_flats.py
tests/: conftest.py  test_flat.py  test_flats_generator.py  test_json_worker.py  test_parser_cian.py  test_parser_cian_new.py
